--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,4 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 body {
   font-family: "poppins", sans-serif;
+}
+
+.btn {
+  font-family: "poppins", sans-serif;
+}
+
+.form-control:focus {
+  box-shadow: none;
+  border: 1px solid #000;
 }/*# sourceMappingURL=styles.css.map */
